# SERA

./: .gitignore  docker-compose.yml  dockerfile  main.py  mlflow.db  pyproject.toml
.github/workflows/: main.yml
app/blueprints/data/: eval_gold_v1.meta.json  eval_gold_v1.parquet
app/blueprints/data/chunks/: page_001.md  page_002.md  page_003.md  page_004.md  page_005.md  page_006.md  page_007.md
app/blueprints/data/medical_o1_sft_/: test.csv
app/blueprints/models/: embedding_model.py  rewriter_llm.py
app/blueprints/prompts/: rewriter_prompt.py
app/blueprints/rag_eval/: dataset.py  evals.py  mlflow_eval.py
app/blueprints/rag_eval/tests/: conftest.py  test_dataset.py  test_flow.py  test_predict_fn.py
app/blueprints/utilities/: PII.py  llm_trace.py  metrics.py  mlflow_tracker.py
app/blueprints/vector_store/: PII.py  client.py  parser.py  rag_pipeline.py  retrive.py
app/configs/: config.py  db.py  logger.py  minio_bucket.py  redis.py
docs/: SRS.md
