[project]
name = "sera-ai"
version = "0.1.0"
description = "SERA AI backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "accelerate>=1.13.0",
    "alembic>=1.16.0",
    "anyio>=4.13.0",
    "asyncpg>=0.31.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.0",
    "fastapi-sso>=0.21.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "minio>=7.2.20",
    "mlflow>=3.12.0",
    "orjson>=3.11.8",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.2",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "pymupdf>=1.27.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.44.0",
    "ninja>=1.13.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "langchain-huggingface>=1.2.2",
    "flagembedding>=1.4.0",
    "ragas>=0.4.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.uv]
package = false
